[gd_scene load_steps=11 format=3 uid="uid://dyfv2lp1v1klm"]

[ext_resource type="FontFile" uid="uid://cr3k0sjtqygjt" path="res://UserInterface/Knewave-Regular.ttf" id="1_q2a8k"]
[ext_resource type="Script" path="res://UserInterface/win_screen_summary.gd" id="1_sq8u5"]
[ext_resource type="StyleBox" uid="uid://chxmsfr4m408x" path="res://UserInterface/StyleBoxes/ButtonHover.tres" id="2_ses8n"]
[ext_resource type="StyleBox" uid="uid://bd5vrpow0bcj2" path="res://UserInterface/StyleBoxes/ButtonPressed.tres" id="3_igep4"]
[ext_resource type="StyleBox" uid="uid://dxuacj7wm80co" path="res://UserInterface/StyleBoxes/ButtonNormal.tres" id="4_dg4ja"]
[ext_resource type="LabelSettings" uid="uid://cbda8l5413cgc" path="res://UserInterface/blueberry_text.tres" id="5_uw0ls"]

[sub_resource type="LabelSettings" id="LabelSettings_hm6un"]
font = ExtResource("1_q2a8k")
font_size = 72
font_color = Color(0.670007, 0.700673, 0.80524, 1)
shadow_size = 7
shadow_color = Color(0.24472, 0.171147, 0.317642, 0.705882)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_30tbf"]
bg_color = Color(0.5256, 0.6, 0.414, 0.235294)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.29, 0.242633, 0.087, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="LabelSettings" id="LabelSettings_x73t7"]
font = ExtResource("1_q2a8k")
font_size = 48
font_color = Color(0.815744, 0.922393, 0.925778, 1)
shadow_size = 5
shadow_color = Color(0.24472, 0.171147, 0.317642, 0.705882)
shadow_offset = Vector2(2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2nkaq"]
font = ExtResource("1_q2a8k")
font_size = 72
font_color = Color(0.859053, 0.88989, 0.953371, 1)
outline_size = 1
shadow_size = 11
shadow_color = Color(0.168323, 0.113014, 0.223036, 0.705882)
shadow_offset = Vector2(5, 5)

[node name="WinScreenSummary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sq8u5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0
color = Color(0.53049, 0.398579, 0.244085, 1)

[node name="HomeScreen" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_fonts/font = ExtResource("1_q2a8k")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = ExtResource("2_ses8n")
theme_override_styles/hover = ExtResource("2_ses8n")
theme_override_styles/pressed = ExtResource("3_igep4")
theme_override_styles/normal = ExtResource("4_dg4ja")
text = "Home Screen"

[node name="Finished Course" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -398.0
offset_top = 50.0
offset_right = 398.0
offset_bottom = 163.0
grow_horizontal = 2
text = "You Finished The Course 
"
label_settings = SubResource("LabelSettings_hm6un")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestTotalScore" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -200.0
offset_right = 350.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_30tbf")

[node name="Label" type="Label" parent="BestTotalScore"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 35.0
offset_right = 128.0
offset_bottom = 117.0
grow_horizontal = 2
text = "Total Flings"
label_settings = SubResource("LabelSettings_x73t7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalFlingsLabel" type="Label" parent="BestTotalScore"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -35.0
offset_right = 128.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
text = "5
"
label_settings = SubResource("LabelSettings_2nkaq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoleScores" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -200.0
offset_right = -50.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_30tbf")

[node name="Label" type="Label" parent="HoleScores"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 35.0
offset_right = 128.0
offset_bottom = 117.0
grow_horizontal = 2
text = "Hole Flings"
label_settings = SubResource("LabelSettings_x73t7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoleFlingsLabel" type="Label" parent="HoleScores"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -20.0
offset_right = 128.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
text = "Hole 1 : 5 Flings
Hole 2 : 3 Flings
Hole 3 : 4 flings"
label_settings = ExtResource("5_uw0ls")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HomeScreen" to="." method="_on_home_screen_pressed"]
